// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproStateTile > Snapshots > renders the component with all properties filled in 1`] = `
<button
  class="
    amelipro-state-tile
    text-h5
    text-none
  "
  disabled=""
  elevation="0"
  height="auto"
  href="/modified-href"
  id="modified-unique-id"
  min-height="350px"
  ripple="false"
  style="
    background-color: #DDDEDE !important;
    border: 2px solid #545859 !important;
    border-radius: 0.5rem;
    color: #1A1B1B !important;
    padding: 0px;
    min-height: 350px;
  "
  to="/modified-to"
  width="80%"
>
  <span
    class="
      amelipro-state-tile__content
      d-flex
      flex-column
      justify-center
      w-100
    "
    style="
      padding: 32px;
      min-height: 300px;
    "
  >
    <span class="
      amelipro-state-tile__text
      d-flex
      flex-column
      justify-center
      text-center
      w-100
    ">
      <span
        class="
          amelipro-state-tile__first-line
          d-block
          text-center
          text-h5
        "
        id="modified-unique-id-first-line"
      >
        Modified first line
      </span>
      <span
        class="
          amelipro-state-tile__second-line
          d-block
          text-center
          text-h5
        "
        id="modified-unique-id-second-line"
      >
        Modified second line
      </span>
      <span
        class="
          amelipro-state-tile__third-line
          d-block
          mt-6
          text-body-1
          text-center
        "
        id="modified-unique-id-third-line"
      >
        Modified third line
      </span>
    </span>
    <span>
      <span
        class="
          amelipro-state-tile__unavailable
          d-block
          font-weight-bold
          mt-6
          text-center
        "
        id="modified-unique-id-unavailable-text"
      >
        Non disponible
      </span>
    </span>
    <!-- v-if -->
  </span>
</button>
`;

exports[`AmeliproStateTile > Snapshots > renders the component with only required properties filled in 1`] = `
<button
  class="
    amelipro-state-tile
    text-h5
    text-none
  "
  elevation="0"
  height="auto"
  ripple="false"
  style="
    background-color: #00749C;
    border: 2px solid #00749C !important;
    border-radius: 0.5rem;
    color: #FFFFFF;
    padding: 0px;
  "
  width="100%"
>
  <span
    class="
      amelipro-state-tile__content
      d-flex
      flex-column
      justify-center
      w-100
    "
    style="
      padding: 32px 24px;
      min-height: 284px;
    "
  >
    <span class="
      amelipro-state-tile__text
      d-flex
      flex-column
      justify-center
      text-center
      w-100
    ">
      <span class="
        amelipro-state-tile__first-line
        d-block
        text-center
        text-h5
      "></span>
      <!-- v-if -->
      <!-- v-if -->
    </span>
    <span>
      <!-- v-if -->
    </span>
    <!-- v-if -->
  </span>
</button>
`;
